--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
-asgiref==3.7.2
-boto3==1.33.10
-botocore==1.33.10
+asgiref==3.8.1
+black==24.4.2
+boto3==1.35.15
+botocore==1.35.15
 certifi==2023.11.17
 charset-normalizer==3.3.2
-Django==5.0
-gunicorn==21.2.0
-idna==3.6
+click==8.1.7
+Django==5.1.1
+gunicorn==23.0.0
+idna==3.8
 jmespath==1.0.1
+mypy-extensions==1.0.0
 packaging==23.2
-Pillow==10.1.0
-python-dateutil==2.8.2
-requests==2.31.0
-s3transfer==0.8.2
-sentry-sdk==1.38.0
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.2.2
+python-dateutil==2.9.0.post0
+requests==2.32.3
+s3transfer==0.10.2
+sentry-sdk==2.14.0
 six==1.16.0
 sqlparse==0.4.4
 urllib3==2.0.7
